# echeck

./: .gitignore  API_EXAMPLES.md  BUILD.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  README_go.md  build.sh  ca.c  cert_utils.c  cert_utils.h  cert_verify.go  cert_verify_test.go  common.c  common.h  echeck.go  echeck.pc.in  echeck_test.go  go.mod  main.c  run_tests.sh  sgx_cert_verify.c  sgx_cert_verify.h  sgx_quote_parser.c  sgx_quote_verify.c  sgx_quote_verify.h  sgx_types.h  sgx_utils.c  sgx_utils.h  update_includes.sh
.github/workflows/: build-openssl-arm64.yml  build.yml
cmake/: echeck.pc.in
echeck-cli/: README.md  main.go
include/: echeck.h
include/echeck/: ca.h  cert_utils.h  common.h  openssl_runtime.h  sgx_cert_verify.h  sgx_quote_parser.h  sgx_quote_verify.h  sgx_utils.h
src/include/: ca.h  cert_utils.h  common.h  echeck_internal.h  echeck_openssl.h  echeck_quote.h  getopt_win.h  openssl_runtime.h  sgx_cert_verify.h  sgx_quote_parser.h  sgx_quote_verify.h  sgx_types.h  sgx_utils.h
src/lib/: ca.c  cert_utils.c  common.c  echeck_quote.c  openssl_runtime.c  sgx_cert_verify.c  sgx_quote_parser.c  sgx_quote_verify.c  sgx_utils.c
src/main/: main.c  main_new.c
test/: sample.pem  sample2.pem
